--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
                     <ul class="list-unstyled">
     
     <li>
+        <h2 class="meta-title"><a href="https://tolquien.com/articles/tu-dices-alda/">Tu dices Alda, yo digo Galadh</a></h2>
+        <div class="meta-date">
+            <time>2021/01/19</time>
+        </div>
+    </li>
+    
+    <li>
         <h2 class="meta-title"><a href="https://tolquien.com/articles/un-vicio-secreto/">Un Vicio Secreto</a></h2>
         <div class="meta-date">
             <time>2021/01/19</time>
